# objserve

./: .gitignore  Cargo.toml  justfile
migrations/: 20221217020952_objs.sql
src/: errors.rs  lib.rs  pagination.rs
src/collections/: mod.rs  model.rs  routes.rs
src/objs/: mod.rs  model.rs  routes.rs
